--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -26,5 +26,5 @@
   <%= f.number_field :extra_message_price %>
   <%= f.label :extra_chat_price %>
   <%= f.number_field :extra_chat_price %>
-  <%= f.submit 'Cadastrar'%>
+  <%= f.submit t('.submit') %>
 <% end %>
