--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <%= link_to  "Registrar Usuário", new_user_registration_path %>
+<%= link_to  "Bots", bots_path %>
 <main>
   <p>Bem vindo ao sistema de gerenciamento de Bots!</p>
 </main>
