Cria a view de todos os Bots
co-authored-by: Renato Braga Santini <renato.santini@gmail.com>

--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -1,6 +1,11 @@
-<% @bots.each do |bot|%>
-  <%= bot.company.name %>
-  <%= bot.order.plan.name %>
-  <%= bot.status %>
-  <%= bot.token %>
+<h2>Bots</h2>
+<div>
+  <% @bots.each do |bot|%>
+  <ul>
+    <%= bot.company.name %>
+    <%= bot.order.plan.name %>
+    <%= Bot.human_attribute_name("status.#{bot.status}") %>
+    <%= bot.token %>
+  </ul>
 <% end %>
+</div>
