Aviso de erro, sem bots cadastrados
co-authored-by: Renato Braga Santini <renato.santini@gmail.com>

--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -1,4 +1,7 @@
 <h2>Bots</h2>
+<% if @bots.empty?%>
+  <p>Ainda não foi criado nenhum bot!</p>
+<% end %>
 <div>
   <% @bots.each do |bot|%>
   <ul>
