--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
     <% if user_signed_in? %>
       <nav>
         <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
-        <%= link_to 'Planos', plans_path%>
-        <%= link_to  "Solicitações de cancelamento", order_cancellation_requests_path %>
-
+        <%= link_to t('activerecord.models.plan.other'), plans_path %>
+        <%= link_to t('activerecord.models.purchase_cancellation.other'), purchase_cancellations_path %>
       </nav>
     <% end %>
 
