Criar index e show de purchases
Co-authored-by: gabrielsugai <gabrielsugai@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
         <%= link_to t('activerecord.models.plan.other'), plans_path %>
         <%= link_to t('activerecord.models.purchase_cancellation.other'), purchase_cancellations_path %>
+        <%= link_to t('activerecord.models.purchase.other'), purchases_path %>
       </nav>
     <% end %>
 
