Confirma bloqueio de bot
co-authored-by: Renato Braga Santini <renato.santini@gmail.com>

--- a/app/views/bots/show.html.erb
+++ b/app/views/bots/show.html.erb
@@ -7,8 +7,12 @@
   <dt>Status:</dt>
   <dd><%= Bot.human_attribute_name("status.#{@bot.status}") %></dd>
   <% if @bot.active? %>
-    <p><%= link_to 'Bloquear', bot_block_path(@bot), method: :put %></p>
-    <% elsif @bot.awaiting? %>
-      <p>Aguardando confirmação de bloqueio</p>
+    <p><%= link_to 'Bloquear', bot_block_bots_path(@bot), method: :post %></p>
+  <% elsif @bot.awaiting? %>
+      <% if @block_bot.user != current_user %>
+        <p><%= link_to 'Confirmar bloqueio', confirm_bot_block_bot_path(@bot), method: :post %></p>
+      <% else %>
+        <p>Aguardando confirmação de bloqueio</p>
+      <% end %>
   <% end %>
 </dl>
