--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -13,7 +13,7 @@
   <dd><%= @purchase.plan.name %></dd>
 
   <dt><%= Plan.human_attribute_name(:price) %></dt>
-  <dd><%= number_to_currency(@purchase.price_when_purchased) %></dd>
+  <dd><%= number_to_currency(@purchase.price_when_bought) %></dd>
 
   <dt><%= Plan.human_attribute_name(:platforms) %></dt>
   <dd><%= @purchase.plan.platforms %></dd>
