--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,6 +1,6 @@
-<% flash.each do |key, value| %>
-  <div class="alert alert-<%= key %>">
-    <%= value %>
-  </div>
+<% flash.each do |message_type, message| %>
+  <% message_type = message_type == 'notice' ? 'info' : message_type %>
+  <% message_type = message_type == 'alert' ? 'danger' : message_type %>
+  <% message_type ||= 'info'  %>
+  <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
 <% end %>
-
