--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,31 +1,29 @@
 <h1>Lista de Planos</h1>
 
-  <section>
+<section>
+  <%= link_to 'Cadastrar novo plano', new_plan_path, class: 'btn btn-primary' %>
 
-      <table class="col table">
-        <thead>
-          <tr>
-            <th scope="col"><%= t('activerecord.attributes.plan.name') %></th>
-            <th scope="col"><%= t('activerecord.attributes.plan.current_price') %></th>
-            <th scope="col"><%= t('activerecord.attributes.plan.status') %></th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
+  <table class="col table">
+    <thead>
+      <tr>
+        <th scope="col"><%= t('activerecord.attributes.plan.name') %></th>
+        <th scope="col"><%= t('activerecord.attributes.plan.current_price') %></th>
+        <th scope="col"><%= t('activerecord.attributes.plan.status') %></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
 
-        <tbody>
-          <% @plans.each do |plan| %>
-            <tr id="plan-<%= plan.id %>">
-              <td><%= plan.name %></td>
-              <td><%= number_to_currency(plan.current_price) %></td>
-              <td><%= Plan.human_attribute_name("status.#{plan.status}") %></td>
+    <tbody>
+      <% @plans.each do |plan| %>
+        <tr id="plan-<%= plan.id %>">
+          <td><%= plan.name %></td>
+          <td><%= number_to_currency(plan.current_price) %></td>
+          <td><%= Plan.human_attribute_name("status.#{plan.status}") %></td>
 
-              <td><%= link_to t('views.navigation.details'), plan_path(plan), id: "details-#{plan.id}" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+          <td><%= link_to t('views.navigation.details'), plan_path(plan), id: "details-#{plan.id}" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-  </section>
-
-
-<%= link_to 'Cadastrar novo plano', new_plan_path %>
+</section>
