--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<main>
-  <p>Bem vindo ao sistema de gerenciamento de Bots!</p>
-</main>
+<h1><%= t('views.application_name') %></h1>
+
+<section>
+  <p><%= t('views.greeting') %></p>
+</section>
