Possibilita planos sem cobrança extra
Co-authored-by: librity <luis.geniole@gmail.com>

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -28,6 +28,9 @@
   <%= f.label :limit_monthly_messages %>
   <%= f.number_field :limit_monthly_messages %>
 
+  <%= f.check_box :blocked_on_limit %>
+  <%= f.label :blocked_on_limit %>
+
   <%= f.label :extra_message_price %>
   <%= f.number_field :extra_message_price %>
 
